[tool.poetry]
name = "django-dramatiq-pg"
version = "1.3.3"
description = "Integration of Django with dramatiq-pg"
readme = "README.rst"
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
homepage = "https://github.com/uptick/django-dramatiq-pg"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Framework :: Django",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">= 3.1"
dramatiq-pg = ">= 0.11.0"

[tool.poetry.dev-dependencies]
psycopg2 = "^2.9.3"
flake8 = "^5.0.4"

[tool.isort]
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
extra_standard_library = ["arrow", "dateutil", "factory", "invoke", "pytz", "requests", "tablib", "yaml"]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
